--- a/contriever/contriever_environment.yml
+++ b/contriever/contriever_environment.yml
@@ -12,11 +12,11 @@ dependencies:
   - cudatoolkit=11.3.1
   - faiss-gpu=1.7.2
   - intel-openmp=2021.4.0
-  - ld_impl_linux-64=2.38
+  #- ld_impl_linux-64=2.38
   - libfaiss=1.7.2
   - libffi=3.3
-  - libgcc-ng=12.2.0
-  - libstdcxx-ng=12.2.0
+  #- libgcc-ng=12.2.0
+  #- libstdcxx-ng=12.2.0
   - libuv=1.44.2
   - libzlib=1.2.12
   - llvm-openmp=14.0.4
@@ -24,7 +24,7 @@ dependencies:
   - mkl-service=2.4.0
   - mkl_fft=1.3.1
   - mkl_random=1.2.2
-  - ncurses=6.3
+  #- ncurses=6.3
   - numpy=1.23.4
   - numpy-base=1.23.4
   - openssl=1.1.1s
@@ -32,7 +32,7 @@ dependencies:
   - python=3.8.13
   - pytorch=1.11.0
   - pytorch-mutex=1.0
-  - readline=8.1.2
+  #- readline=8.1.2
   - setuptools=65.5.0
   - six=1.16.0
   - sqlite=3.38.5
